src/css/gameboy.css
/* ... */
.dpad.pressed-right > .right
{
    box-shadow: -2px 1px 7px #1b1b1b, inset 0 3px 2px -1px #676767;
}

.dpad > .arrow:before
{
    position: absolute;
    content:"";
    left: 0;
    top: 0;
    opacity: 0.2;
    text-shadow: 0 1px #777;
    color: #000;
    font-size: 20px;
    line-height: 44px;
    width: 100%;
    height: 100%;
    text-align: center;
}

.dpad > .up:before
{
    content: "\25B2\FE0E";
}

.dpad.pressed-up > .up:before
{
    top: -2px;
}

.dpad.pressed-down > .up:before
{
    top: 2px;
}

.dpad.pressed-left > .up:before
{
    left: -1px;
}
.dpad.pressed-right > .up:before
{
    left: 1px;
}

.dpad > .down:before
{
    content:"\25BC\FE0E";
}

.dpad.pressed-up > .down:before
{
    top: -2px;
    text-shadow: 0 1px #aaa;
}

.dpad.pressed-down > .down:before
{
    top: 2px;
}

.dpad.pressed-left > .down:before
{
    left: -1px;
}

.dpad.pressed-right > .down:before
{
    left: 1px;
}

.dpad > .left:before
{
    content:"\25C0\FE0E";
}

.dpad.pressed-up > .left:before
{
    top: -1px;
}

.dpad.pressed-down > .left:before
{
    top: 1px;
}

.dpad.pressed-left > .left:before
{
    left: -2px;
}

.dpad.pressed-right > .left:before
{
    left: 2px;
}

.dpad > .right:before
{
    content:"\25B6\FE0E";
}

.dpad.pressed-up > .right:before
{
    top: -1px;
}

.dpad.pressed-down > .right:before
{
    top: 1px;
}

.dpad.pressed-left > .right:before
{
    left: -2px;
}

.dpad.pressed-right > .right:before
{
    left: 2px;
}

.dpad > .center
{
    top: 33%;
    left: 40px;
    border: 0;
    width: 42px;
    height: 42px;
}

.dpad > .center:before
{
    position: absolute;
    height: 24px;
    width: 24px;
    content:"";
    border-radius: 100%;
    top: 8px;
    left: 8px;
    background-image: -webkit-linear-gradient(top, #000, #888);
    box-shadow: 0 2px 0 #ccc;
    opacity: 0.2;
}

.dpad.pressed-left > .center
{
    width: 40px;
}

.dpad.pressed-right > .center
{
    width: 40px;
    left: 42px;
}

.dpad.pressed-up > .center:before
{
    top: 7px;
}
.dpad.pressed-down > .center:before
{
    top: 9px;
}
.dpad.pressed-left > .center:before
{
    left: 7px;
}
.dpad.pressed-right > .center:before
{
    left: 9px;
}

#element-dpad
{
  position: absolute;
  left: 8px;
  bottom: 100px;
}

#element-buttons
{
  position: absolute;
  right: 20px;
  bottom: 120px;
}

#element-options
{
  position: absolute;
  width: 100%;
  bottom: 10px;
  left: 0;
}

#element-screen
{
  position: absolute;
  width: 100%;
  top: 30px;
  left: 0;
}

#screen-console.open
{
  transition: left 0.3s ease-in-out;
  left: 100%;
}

.input-code
{
  width: 80%;
  font-size: 30px;
  border: 3px solid #fff;
  background-color: #999;
  border-radius: 6px;
  margin: 8px 0;
  color: #fff;
  padding: 8px;

  border: 0;
  font-size: 20px;
  background-color: #666;
  margin: 8px 0;
  color: #fff;
  padding: 8px;
  border-radius: 6px;
  font-family: Courier, fixed;
  text-align: center;
  max-width: 300px;
}

.input-code:focus
{
  outline: none;
  background-color: #888;
}

.auth-code
{
  font-size: 20px;
  background-color: #666;
  margin: 8px 0;
  color: #fff;
  padding: 8px;
  border-radius: 6px;
  font-family: Courier, fixed;
  text-align: center;
  word-wrap: break-word;
  cursor: text;
  -webkit-user-select: text;
  -ms-user-select: text;
  -moz-user-select: text;
  user-select: text;
  border: 0;
}

.auth-code:focus
{
  outline: none;
}

/* iPhone 4: Portrait */
@media only screen and (width: 320px) and (height: 460px) {

  #element-screen
  {
    top: 0;
  }

  .surround
  {
    height: 287px;
    border-radius: 0;
  }

  #LCD-dropshadow
  {
    box-shadow:0 0 0 0, inset 0 0 0 0;
  }

  #screen-console
  {
    border-radius: 0;
  }

  #element-dpad
  {
    left: 0;
    bottom: 40px;
  }

  #element-buttons
  {
    right: 10px;
    bottom: 60px;
  }

  #element-options
  {
    bottom: -10px;
  }

  .appicon
  {
    display: none;
  }

}

/* iPhone 4: Landscape */
@media only screen and (width: 480px) and (height: 320px) {

  #element-screen
  {
    top: 0;
  }

  #element-options
  {
    bottom: 10px;
  }

  #element-surround
  {
  }

  #element-options
  {
    bottom: -4px;
  }

  #element-buttons
  {
    right: 8px;
  }

  #group-buttons
  {
    width: 132px;
  }

  #element-dpad
  {
    left: -4px;
  }

  #group-options
  {
    width: 460px;
  }

  #LCD-dropshadow
  {
    box-shadow:0 0 0 0, inset 0 0 0 0;
  }

  .surround
  {
    height: 287px;
    width: 321px;
    border-radius: 0;
  }

  .appicon, .apptitle
  {
    display: none;
  }

}

/* iPhone 5: Portrait */
@media only screen and (width: 320px) and (height: 548px) {

  #element-screen
  {
    top: 0;
  }

  #element-dpad
  {
    left: 0;
  }

  #element-buttons 
  {
    right: 10px;
  }

  .surround
  {
    height: 287px;
    border-radius: 0;
  }

  #screen-console
  {
    border-radius: 0;
  }

  #screen-games
  {
    border-radius: 0;
  }

  #LCD-dropshadow
  {
    box-shadow:0 0 0 0, inset 0 0 0 0;
  }

  .appicon
  {
    width: 128px;
    height: 128px;
    background-size: 128px 128px;
    border-radius: 26px;
  }

}

/* iPhone 5: Landscape */
@media only screen and (width: 568px) and (height: 320px) {

  #element-screen
  {
    top: 0;
  }

  #element-options
  {
    bottom: 10px;
  }

  #element-surround
  {
  }

  #element-options
  {
    bottom: -4px;
  }

  #element-buttons
  {
    right: 8px;
  }

  #group-buttons
  {
    width: 132px;
  }

  #element-dpad
  {
    left: -4px;
  }

  #group-options
  {
    width: 500px;
  }

  #LCD-dropshadow
  {
    box-shadow:0 0 0 0, inset 0 0 0 0;
  }

  .surround
  {
    height: 287px;
    width: 321px;
    border-radius: 0;
  }

  .appicon {
    display: none;
  }

  .apptitle {
    display: none;
  }

}

/* iPhone 6: Portrait */
@media only screen and (width: 375px) and (height: 647px) {

  #element-screen
  {
    top: 24px;
  }

  #element-buttons
  {
    right: 20px;
  }

  #element-options
  {
    bottom: 20px;
  }

}
/* ... */

